--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="title">Adrian Torres</h1>
         <p class="section__text__p2">Web developer</p>
         <div class="btn-container">
-          <button class="btn btn-color-2" onclick="window.open('./person/')">Download CV</button>
+          <button class="btn btn-color-2" onclick="window.open('./person/AdrianTorresMonteroHV.pdf')">Download CV</button>
 
           <button class="btn btn-color-1" onclick="location.href='#contact'">Info Contact</button>
         </div>
@@ -56,14 +56,14 @@
             src="./person/linkedin.png"
             alt="My linkedIn profile" 
             class="icon" 
-            onclick="location.href='https://linkedin.com'"
+            onclick="location.href='https://co.linkedin.com/in/adri%C3%A1n-torres-montero-69482127b?trk=people-guest_people_search-card'"
           />
 
           <img 
             src="./person/github.png"
             alt="My github profile" 
             class="icon" 
-            onclick="location.href='https://github.com'"
+            onclick="location.href='https://github.com/AdrianTorresMontero'"
           />
         </div>
       </div>
@@ -83,7 +83,11 @@
         
         <div class="text-container">
           <h2>I'm Adrian</h2>
-          <p>Web developer from Bogotá, Colombia. I work with JavaScript most of the time, but learning new programming languages or frameworks is not a problem. I am naturally curius and constantly working on enhancing my skills. 
+          <p>Dedicated and in constant improvement, the desire to contribute my combination of knowledge and skills to enhance business performance drives me. My main focus is on JavaScript development, and I have the ability to easily grasp new programming languages, technologies, and tools.
+
+            My experience includes database management, the creation of interactive web pages, and proficiency in handling frameworks like React. Additionally, I excel in the effective implementation of the version control system Git in collaborative environments.
+            
+            I am a resourceful and passionate problem solver, particularly fascinated by the fields of artificial intelligence and machine learning. My goal is to apply these skills and passions in the role of a web developer, contributing to the team's success and executing innovative projects.
           </p>
         </div>
       </div>
@@ -207,16 +211,16 @@
               <img src="./person/" alt="Project 1" class="project-img">
               <h2 class="experience-sub-title project-title">Project One</h2>
               <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AdrianTorresMontero/E-Commerce-Website'">
                   github
                 </button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/AdrianTorresMontero/E-Commerce-Website'">
                   Live Demo
                 </button>
               </div>
             </div>
           </div>
-          <div class="details-container color-container">
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img src="./person/" alt="Project 2" class="project-img">
               <h2 class="experience-sub-title project-title">Project Two</h2>
@@ -243,7 +247,7 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <img 
@@ -260,11 +264,11 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img src="./person/email.png" alt="Email icon" class="icon contact-icon email-icon"/>
-          <p><a href="torresadriian@gmail.com">torresadriian@gmail.com</a></p>
+          <p><a href="mailto:torresadriian@gmail.com">torresadriian@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img src="./person/linkedin.png" alt="LinkedIn icon" class="icon contact-icon"/>
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://co.linkedin.com/in/adri%C3%A1n-torres-montero-69482127b?trk=people-guest_people_search-card">LinkedIn</a></p>
         </div>
       </div>
     </section>
